[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 90
verbose = 1
quiet = false
exclude = ['setup.py', 'tests/*']

[tool.pytest.ini_options]
addopts = ['-q']
testpaths = ['tests']


[tool.ruff]
line-length = 160
lint.select = ['E', 'F', 'C90', 'D', 'RUF']
lint.ignore = ['D100', 'D101','D104', 'D105', 'D203', 'D204', 'D212', 'RUF001', 'RUF010']
extend-exclude = [
    'tests/',
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.mypy]
#ignore_missing_imports = true
#no_warn_no_return = true
#check_untyped_defs = true
html_report = 'mypyhtml'
exclude = [
    'tests/',
]

[tool.isort]
line_length = 160
