[tool:pytest]
addopts = --mccabe --random -vv -s
mccabe-complexity =
    tmerge.py 9
    cli.py 8
    *.py 6

[pycodestyle]
count = True
ignore = E501
max-line-length = 160
statistics = True

[pydocstyle]
inherit = false
ignore = D100,D101,D104,D105,D203,D212,D401
match = .*\.py

[metadata]
license_file = LICENSE.md
