[tool:pytest]
addopts = --mccabe --random -q
testpaths = ["tests"]
mccabe-complexity =
    tools.py 5
    cli.py 6
    *.py 4

[pycodestyle]
count = True
ignore = E501
max-line-length = 180
statistics = True

[pydocstyle]
inherit = false
ignore = D100,D101,D104,D105,D203,D212,D401
match = .*\.py

[mypy]
ignore_missing_imports = True
html_report = mypyhtml

[flake8]
max-line-length = 180
max-complexity = 5
show-source = True
statistics = True
count = True

[metadata]
license_file = LICENSE.md
